feat: Cloudflare 凭据状态管理增强
- 凭据有效期 10 分钟，自动过期
- 线程安全（使用 threading.Lock）
- 遇到 429/403 时可标记凭据无效
- 新增 API: /api/cloudflare/state, /api/cloudflare/refresh, /api/cloudflare/clear
- 管理后台新增 CF 状态实时显示
- 剩余有效时间倒计时
- 获取/清除/刷新凭据按钮

--- a/static/manage.html
+++ b/static/manage.html
@@ -394,6 +394,43 @@
                     </div>
                 </div>
 
+                <!-- Cloudflare 凭据状态 -->
+                <div class="rounded-lg border border-border bg-background p-6">
+                    <h3 class="text-lg font-semibold mb-4">Cloudflare 凭据状态</h3>
+                    <div class="space-y-4">
+                        <!-- 状态显示 -->
+                        <div id="cfStateDisplay" class="rounded-md p-4 border">
+                            <div class="flex items-center justify-between mb-3">
+                                <div class="flex items-center gap-2">
+                                    <span id="cfStatusIndicator" class="w-3 h-3 rounded-full bg-gray-400"></span>
+                                    <span id="cfStatusText" class="text-sm font-medium">加载中...</span>
+                                </div>
+                                <span id="cfRemainingTime" class="text-xs text-muted-foreground"></span>
+                            </div>
+                            <div id="cfStateDetails" class="text-xs text-muted-foreground space-y-1">
+                                <p>User-Agent: <span id="cfUserAgent">-</span></p>
+                                <p>Cookies: <span id="cfCookiesCount">0</span> 个</p>
+                                <p>更新时间: <span id="cfLastUpdated">-</span></p>
+                            </div>
+                        </div>
+
+                        <!-- 操作按钮 -->
+                        <div class="flex gap-2">
+                            <button onclick="refreshCfCredentials()" class="flex-1 inline-flex items-center justify-center rounded-md bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 text-sm">
+                                <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path></svg>
+                                获取凭据
+                            </button>
+                            <button onclick="clearCfCredentials()" class="flex-1 inline-flex items-center justify-center rounded-md border border-input bg-background hover:bg-accent h-9 px-4 text-sm">
+                                <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
+                                清除凭据
+                            </button>
+                            <button onclick="loadCfState()" class="inline-flex items-center justify-center rounded-md border border-input bg-background hover:bg-accent h-9 px-3 text-sm">
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path></svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- 调试配置 -->
                 <div class="rounded-lg border border-border bg-background p-6">
                     <h3 class="text-lg font-semibold mb-4">调试配置</h3>
@@ -1010,6 +1047,14 @@
         loadCloudflareSolverConfig=async()=>{try{const r=await apiRequest('/api/cloudflare/config');if(!r)return;const d=await r.json();if(d.success&&d.config){$('cfgCloudflareSolverEnabled').checked=d.config.solver_enabled||false;$('cfgCloudflareSolverUrl').value=d.config.solver_api_url||'http://localhost:8000/v1/challenge';toggleCloudflareSolverOptions()}}catch(e){console.error('加载Cloudflare Solver配置失败:',e)}},
         saveCloudflareSolverConfig=async()=>{try{const enabled=$('cfgCloudflareSolverEnabled').checked,apiUrl=$('cfgCloudflareSolverUrl').value.trim();if(enabled&&!apiUrl)return showToast('请输入 Solver API 地址','error');const r=await apiRequest('/api/cloudflare/config',{method:'POST',body:JSON.stringify({solver_enabled:enabled,solver_api_url:apiUrl||null})});if(!r)return;const d=await r.json();d.success?showToast('Cloudflare Solver 配置保存成功','success'):showToast('保存失败: '+(d.message||'未知错误'),'error')}catch(e){showToast('保存失败: '+e.message,'error')}},
         toggleCloudflareSolverOptions=()=>{const enabled=$('cfgCloudflareSolverEnabled').checked;$('cloudflareSolverOptions').style.display=enabled?'block':'none'},
+        // Cloudflare State functions
+        cfStateTimer=null,
+        loadCfState=async()=>{try{const r=await apiRequest('/api/cloudflare/state');if(!r)return;const d=await r.json();if(d.success&&d.state){updateCfStateDisplay(d.state)}}catch(e){console.error('加载CF状态失败:',e)}},
+        updateCfStateDisplay=(state)=>{const indicator=$('cfStatusIndicator'),statusText=$('cfStatusText'),remaining=$('cfRemainingTime'),display=$('cfStateDisplay');if(state.is_valid){indicator.className='w-3 h-3 rounded-full bg-green-500';statusText.textContent='有效';statusText.className='text-sm font-medium text-green-600';display.className='rounded-md p-4 border border-green-200 bg-green-50 dark:bg-green-900/20 dark:border-green-800';startCfCountdown(state.remaining_seconds)}else if(state.has_credentials){indicator.className='w-3 h-3 rounded-full bg-yellow-500';statusText.textContent='已过期';statusText.className='text-sm font-medium text-yellow-600';display.className='rounded-md p-4 border border-yellow-200 bg-yellow-50 dark:bg-yellow-900/20 dark:border-yellow-800';remaining.textContent='已过期';stopCfCountdown()}else{indicator.className='w-3 h-3 rounded-full bg-gray-400';statusText.textContent='无凭据';statusText.className='text-sm font-medium text-muted-foreground';display.className='rounded-md p-4 border';remaining.textContent='';stopCfCountdown()}$('cfUserAgent').textContent=state.user_agent||'-';$('cfCookiesCount').textContent=state.cookies_count||0;$('cfLastUpdated').textContent=state.last_updated?new Date(state.last_updated).toLocaleString():'从未'},
+        startCfCountdown=(seconds)=>{stopCfCountdown();const updateDisplay=()=>{if(seconds<=0){$('cfRemainingTime').textContent='已过期';loadCfState();return}const m=Math.floor(seconds/60),s=seconds%60;$('cfRemainingTime').textContent=`剩余 ${m}:${s.toString().padStart(2,'0')}`;seconds--;cfStateTimer=setTimeout(updateDisplay,1000)};updateDisplay()},
+        stopCfCountdown=()=>{if(cfStateTimer){clearTimeout(cfStateTimer);cfStateTimer=null}},
+        refreshCfCredentials=async()=>{try{showToast('正在获取凭据...','info');const r=await apiRequest('/api/cloudflare/refresh',{method:'POST'});if(!r)return;const d=await r.json();if(d.success){showToast('凭据获取成功','success');if(d.state)updateCfStateDisplay(d.state)}else{showToast('获取失败: '+(d.message||'未知错误'),'error')}}catch(e){showToast('获取失败: '+e.message,'error')}},
+        clearCfCredentials=async()=>{if(!confirm('确定要清除 Cloudflare 凭据吗？'))return;try{const r=await apiRequest('/api/cloudflare/clear',{method:'POST'});if(!r)return;const d=await r.json();if(d.success){showToast('凭据已清除','success');if(d.state)updateCfStateDisplay(d.state)}else{showToast('清除失败','error')}}catch(e){showToast('清除失败: '+e.message,'error')}},
         toggleCacheOptions=()=>{const enabled=$('cfgCacheEnabled').checked;$('cacheOptions').style.display=enabled?'block':'none'},
         loadCacheConfig=async()=>{try{console.log('开始加载缓存配置...');const r=await apiRequest('/api/cache/config');if(!r){console.error('API请求失败');return}const d=await r.json();console.log('缓存配置数据:',d);if(d.success&&d.config){const enabled=d.config.enabled!==false;const timeout=d.config.timeout||7200;const baseUrl=d.config.base_url||'';const effectiveUrl=d.config.effective_base_url||'';console.log('设置缓存启用:',enabled);console.log('设置超时时间:',timeout);console.log('设置域名:',baseUrl);console.log('生效URL:',effectiveUrl);$('cfgCacheEnabled').checked=enabled;$('cfgCacheTimeout').value=timeout;$('cfgCacheBaseUrl').value=baseUrl;if(effectiveUrl){$('cacheEffectiveUrlValue').textContent=effectiveUrl;$('cacheEffectiveUrl').classList.remove('hidden')}else{$('cacheEffectiveUrl').classList.add('hidden')}toggleCacheOptions();console.log('缓存配置加载成功')}else{console.error('缓存配置数据格式错误:',d)}}catch(e){console.error('加载缓存配置失败:',e);showToast('加载缓存配置失败: '+e.message,'error')}},
         loadGenerationTimeout=async()=>{try{console.log('开始加载生成超时配置...');const r=await apiRequest('/api/generation/timeout');if(!r){console.error('API请求失败');return}const d=await r.json();console.log('生成超时配置数据:',d);if(d.success&&d.config){const imageTimeout=d.config.image_timeout||300;const videoTimeout=d.config.video_timeout||1500;console.log('设置图片超时:',imageTimeout);console.log('设置视频超时:',videoTimeout);$('cfgImageTimeout').value=imageTimeout;$('cfgVideoTimeout').value=videoTimeout;console.log('生成超时配置加载成功')}else{console.error('生成超时配置数据格式错误:',d)}}catch(e){console.error('加载生成超时配置失败:',e);showToast('加载生成超时配置失败: '+e.message,'error')}},
@@ -1021,7 +1066,7 @@
         refreshLogs=async()=>{await loadLogs()},
         showToast=(m,t='info')=>{const d=document.createElement('div'),bc={success:'bg-green-600',error:'bg-destructive',info:'bg-primary'};d.className=`fixed bottom-4 right-4 ${bc[t]||bc.info} text-white px-4 py-2.5 rounded-lg shadow-lg text-sm font-medium z-50 animate-slide-up`;d.textContent=m;document.body.appendChild(d);setTimeout(()=>{d.style.opacity='0';d.style.transition='opacity .3s';setTimeout(()=>d.parentNode&&document.body.removeChild(d),300)},2000)},
         logout=()=>{if(!confirm('确定要退出登录吗?'))return;localStorage.removeItem('adminToken');location.href='/login'},
-        switchTab=t=>{const cap=n=>n.charAt(0).toUpperCase()+n.slice(1);['tokens','settings','webdav','logs'].forEach(n=>{const active=n===t;$(`panel${cap(n)}`).classList.toggle('hidden',!active);$(`tab${cap(n)}`).classList.toggle('border-primary',active);$(`tab${cap(n)}`).classList.toggle('text-primary',active);$(`tab${cap(n)}`).classList.toggle('border-transparent',!active);$(`tab${cap(n)}`).classList.toggle('text-muted-foreground',!active)});if(t==='settings'){loadAdminConfig();loadProxyConfig();loadProxyPool();loadWatermarkFreeConfig();loadCloudflareSolverConfig();loadCacheConfig();loadGenerationTimeout();loadATAutoRefreshConfig()}else if(t==='logs'){loadLogs()}else if(t==='webdav'){loadWebdavConfig();loadWebdavStats();refreshWebdavVideos();refreshUploadLogs()}},
+        switchTab=t=>{const cap=n=>n.charAt(0).toUpperCase()+n.slice(1);['tokens','settings','webdav','logs'].forEach(n=>{const active=n===t;$(`panel${cap(n)}`).classList.toggle('hidden',!active);$(`tab${cap(n)}`).classList.toggle('border-primary',active);$(`tab${cap(n)}`).classList.toggle('text-primary',active);$(`tab${cap(n)}`).classList.toggle('border-transparent',!active);$(`tab${cap(n)}`).classList.toggle('text-muted-foreground',!active)});if(t==='settings'){loadAdminConfig();loadProxyConfig();loadProxyPool();loadWatermarkFreeConfig();loadCloudflareSolverConfig();loadCfState();loadCacheConfig();loadGenerationTimeout();loadATAutoRefreshConfig()}else if(t==='logs'){loadLogs()}else if(t==='webdav'){loadWebdavConfig();loadWebdavStats();refreshWebdavVideos();refreshUploadLogs()}},
         // WebDAV functions
         toggleWebdavOptions=()=>{const enabled=$('cfgWebdavEnabled').checked;$('webdavOptions').style.display=enabled?'block':'none'},
         loadWebdavConfig=async()=>{try{const r=await apiRequest('/api/webdav/config');if(!r)return;const d=await r.json();if(d.success&&d.config){$('cfgWebdavEnabled').checked=d.config.webdav_enabled||false;$('cfgWebdavUrl').value=d.config.webdav_url||'';$('cfgWebdavUsername').value=d.config.webdav_username||'';$('cfgWebdavPassword').value=d.config.webdav_password||'';$('cfgWebdavUploadPath').value=d.config.webdav_upload_path||'/video';$('cfgAutoDeleteEnabled').checked=d.config.auto_delete_enabled||false;$('cfgAutoDeleteDays').value=d.config.auto_delete_days||30;toggleWebdavOptions()}}catch(e){console.error('加载WebDAV配置失败:',e)}},
